# reducto

./: .gitignore  Cargo.toml  LICENSE  README.md  WARP.md  WARPOption01202509240745.md  benchmark_results.txt
.github/workflows/: performance_regression.yml
.kiro/: tree-with-wc.sh
.kiro/hooks/: auto-git-commit.kiro.hook
.kiro/specs/compression-benchmark-suite/: design.md  requirements.md  tasks.md
.kiro/specs/reducto-mode-3/: design.md  requirements.md  tasks.md
.kiro/steering/: design101-tdd-architecture-principles.md  diagram-conventions.md  refResearch20250921.md
benches/: criterion_benchmarks.rs
docs/: api-documentation.md  benchmark_report_v0.2.md  deployment-guide.md  integration-guide.md  monitoring-setup.md  security-guide.md  troubleshooting-guide.md
examples/: config.toml
refDocs/: tdd-patterns.md
scripts/: build_reducto.sh  performance_regression_detection.rs  security_audit.rs
src/: cdc_chunker.rs  cli_error.rs  compression.rs  compressor.rs  const_optimizations.rs  contract_tests.rs  corpus_manager.rs  data_loader.rs  decision.rs  ecosystem_decompressor.rs  error.rs  errors.rs  formatter.rs  lib.rs  metrics_collector.rs  rolling_hash.rs  sdk.rs  security_manager.rs  serializer.rs  simd_optimizations.rs  stubs.rs  traits.rs  types.rs
src/data/: mod.rs
tests/: cdc_boundary_stability_tests.rs  cli_tests.rs  comprehensive_stress_tests.rs  decision_tests.rs  ecosystem_decompressor_tests.rs  enterprise_load_tests.rs  enterprise_workflow_tests.rs  formatter_tests.rs  gzip_tests.rs  metrics_collector_tests.rs  performance_property_tests.rs  performance_validation_tests.rs  property_tests.rs  reducto_tests.rs  sdk_tests.rs  security_property_tests.rs  timeout_tests.rs
