[package]
name = "reducto-mode-3"
version = "0.1.0"
edition = "2021"
authors = ["Reducto Team"]
description = "High-performance differential synchronization compression system"
license = "MIT"

# Feature flags for enterprise modules
[features]
default = []
enterprise = ["rocksdb"]
security = ["ed25519-dalek", "aes-gcm"]
metrics = ["prometheus", "sysinfo"]
sdk = ["tokio"]

[dependencies]
# L1 Core: Fundamental Rust features (no external dependencies)
# - Ownership, lifetimes, traits, Result/Option, RAII, newtype pattern

# L2 Standard Library: Collections, iterators, smart pointers, thread safety
# - HashMap, Vec, Arc, Mutex, Send/Sync

# L3 External Dependencies: Ecosystem crates
blake3 = { version = "1.5", features = ["serde"] }        # Strong cryptographic hashing
bincode = "1.3"       # Efficient binary serialization
serde = { version = "1.0", features = ["derive"] }
zstd = "0.13"         # High-performance compression
memmap2 = "0.9"       # Memory-mapped file access
hashbrown = "0.14"    # High-performance HashMap
anyhow = "1.0"        # Application error handling
thiserror = "1.0"     # Library error definitions
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }       # Date/time handling

# Enterprise dependencies (feature-gated)
rocksdb = { version = "0.20", optional = true }          # Persistent storage for large corpora

# Security dependencies (feature-gated)
ed25519-dalek = { version = "1.0", optional = true, features = ["serde"] }  # Digital signatures
aes-gcm = { version = "0.9", optional = true }          # Encryption support

# Metrics dependencies (feature-gated)
prometheus = { version = "0.13", optional = true }       # Metrics collection and export
sysinfo = { version = "0.28", optional = true }          # System performance monitoring

# SDK dependencies (feature-gated)
tokio = { version = "1.0", features = ["full"], optional = true }  # Async runtime for SDK

# Additional dependencies for security module
serde_json = "1.0"    # JSON serialization for audit logs
rand = "0.7"          # Random number generation (compatible with ed25519-dalek)
rand_core = "0.5"     # Core random traits

# Cryptographic utilities
subtle = "2.4"        # Constant-time comparison for security
num_cpus = "1.0"      # CPU count for parallel compression

[dev-dependencies]
proptest = "1.0"      # Property-based testing
criterion = "0.5"     # Benchmarking framework
tempfile = "3.0"      # Temporary files for testing
tokio-test = "0.4"    # Async testing utilities
tokio = { version = "1.0", features = ["full"] }  # Async runtime for tests

# Benchmarks will be added in later tasks
# [[bench]]
# name = "rolling_hash"
# harness = false
# 
# [[bench]]
# name = "compression"
# harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
debug = true