[package]
name = "compression-benchmark-suite"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[dependencies]
# Async runtime and HTTP client
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Compression formats
flate2 = "1.0"  # gzip
zstd = "0.13"
sevenz-rust = "0.5"

# Hashing and crypto
blake3 = "1.5"
sha2 = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time and date
chrono = { version = "0.4", features = ["serde"] }

# File system and I/O
memmap2 = "0.9"
tempfile = "3.0"

# Collections and utilities
hashbrown = "0.14"
indexmap = "2.0"

# CLI and progress
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"

# Statistics and analysis
statrs = "0.16"

# Memory mapping and system info
sysinfo = "0.30"

# Async traits
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }



[features]
default = ["all-formats"]
all-formats = ["gzip", "zstd", "sevenz"]
gzip = []
zstd = []
sevenz = []
quick-mode = []